# ChangeLog for sys-apps/cfnrename
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Feb 2008; Tiziano Müller <dev-zero@gentoo.org> cfnrename-0.2.ebuild:
  Added ~amd64 keyword.

  21 Jun 2006; Alexandru Toma (analoguedragon) <flash3001@yahoo.com>
  ChangeLog:
  New ebuild for bug 45907
