@@ -1,4 +1,4 @@
 DIST cfnrename-0.2.tar.gz 16109 RMD160 be0b27862cd7715f3532561bc6a4a36955f63d03 SHA1 4f817f16502b3ddf285807b668bc08360c746012 SHA256 726e773cc319db32650d9f7963cd977b6dd94df94202b40581f56322956948e4
-EBUILD cfnrename-0.2.ebuild 669 RMD160 ed1b3fe1d0f21056a4e752681b5bf433a93d506f SHA1 7976c54ce6c41297183a860757cb5e93bd0c265b SHA256 3512e7dbbee82dc34df2741616b9a593f4ecf5353c4c3646b0e4a53f55089c75
-MISC ChangeLog 329 RMD160 f30c31c3dd4f96606c6b43740371f848156a2ce4 SHA1 146b731296851efa6d1a62ca77922d31c2b2f247 SHA256 74fe2ee07d6b0f06570afdf9a8f5d2d5f53296508443ece26e2165c21e8ffd23
+EBUILD cfnrename-0.2.ebuild 725 RMD160 9faf180698199fea6da51488984afc7cb7dbbd5f SHA1 514f18a04c8e53e35f0e0e0dc75961db48e1bb83 SHA256 0bcba7c37ddc0f4901d70c6c70162d49446f5cd0c240bc31d574713cc82134c3
+MISC ChangeLog 485 RMD160 99fb0437e4d90a226aaabd7b4aa255b00817b1b8 SHA1 a713caab72ceab4670f13558d01d2b0d94fd4d16 SHA256 90412e59365f7354da9ac50491759d30d65a2e58c609801560c71211d7d0da7c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
