@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/cfnrename
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
+  cfnrename-0.2.ebuild:
+  Add suggested RDEPEND=${DEPEND}, sed improved, add die statements.
 
   01 Feb 2008; Tiziano Müller <dev-zero@gentoo.org> cfnrename-0.2.ebuild:
   Added ~amd64 keyword.
